@@ -14,6 +14,7 @@ import uk.gov.hmcts.reform.civil.callback.CaseEvent;
 import uk.gov.hmcts.reform.civil.enums.CaseState;
 import uk.gov.hmcts.reform.civil.enums.YesOrNo;
 import uk.gov.hmcts.reform.civil.enums.dq.GeneralApplicationTypes;
+import uk.gov.hmcts.reform.civil.enums.dq.GeneralApplicationTypesLR;
 import uk.gov.hmcts.reform.civil.helpers.GATypeHelper;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.Fee;
@@ -31,19 +32,20 @@ import uk.gov.hmcts.reform.civil.service.GeneralAppFeesService;
 import uk.gov.hmcts.reform.civil.service.InitiateGeneralApplicationService;
 import uk.gov.hmcts.reform.civil.service.UserService;
 import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
-import uk.gov.hmcts.reform.civil.utils.UserRoleCaching;
+import uk.gov.hmcts.reform.civil.service.validation.GeneralApplicationValidator;
 import uk.gov.hmcts.reform.civil.utils.UserRoleUtils;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 
 import static uk.gov.hmcts.reform.civil.callback.CallbackParams.Params.BEARER_TOKEN;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_START;
@@ -51,17 +53,12 @@ import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.MID;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.SUBMITTED;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.INITIATE_GENERAL_APPLICATION;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.AWAITING_APPLICANT_INTENTION;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.AWAITING_CASE_DETAILS_NOTIFICATION;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.AWAITING_RESPONDENT_ACKNOWLEDGEMENT;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.CASE_DISMISSED;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.CASE_ISSUED;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.IN_MEDIATION;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.PENDING_CASE_ISSUED;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.PROCEEDS_IN_HERITAGE_SYSTEM;
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.INITIATE_GENERAL_APPLICATION_COSC;
+import static uk.gov.hmcts.reform.civil.enums.CaseState.CASE_DISCONTINUED;
+import static uk.gov.hmcts.reform.civil.enums.CaseState.CASE_SETTLED;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
 import static uk.gov.hmcts.reform.civil.model.common.DynamicList.fromList;
-import static uk.gov.hmcts.reform.civil.service.InitiateGeneralApplicationService.INVALID_SETTLE_BY_CONSENT;
+import static uk.gov.hmcts.reform.civil.service.InitiateGeneralApplicationServiceConstants.INVALID_SETTLE_BY_CONSENT;
 
 @Service
 @RequiredArgsConstructor
@@ -76,24 +73,24 @@ public class InitiateGeneralApplicationHandler extends CallbackHandler {
     private static final String INVALID_HEARING_DATE = "The hearing date must be in the future";
     private static final String SET_FEES_AND_PBA = "ga-fees-and-pba";
     private static final String POUND_SYMBOL = "£";
-    private static final List<CaseEvent> EVENTS = Collections.singletonList(INITIATE_GENERAL_APPLICATION);
+    private static final List<CaseEvent> EVENTS = List.of(INITIATE_GENERAL_APPLICATION, INITIATE_GENERAL_APPLICATION_COSC);
+    public static final Set<CaseState> settleDiscontinueStates = EnumSet.of(CASE_SETTLED,
+                                                                            CASE_DISCONTINUED);
     private static final String RESP_NOT_ASSIGNED_ERROR = "Application cannot be created until all the required "
             + "respondent solicitor are assigned to the case.";
     private static final String RESP_NOT_ASSIGNED_ERROR_LIP = "Application cannot be created until the Defendant "
         + "is assigned to the case.";
     public static final String NOT_IN_EA_REGION = "Sorry this service is not available in the current case management location, please raise an application manually.";
+    public static final String NOT_ALLOWED_SETTLE_DISCONTINUE = "Sorry this service is not available, please raise an application manually.";
     private static final String LR_VS_LIP = "Sorry this service is not available, please raise an application manually.";
     private final InitiateGeneralApplicationService initiateGeneralApplicationService;
+    private final GeneralApplicationValidator generalApplicationValidator;
     private final ObjectMapper objectMapper;
     private final UserService userService;
-    private final UserRoleCaching userRoleCaching;
     private final GeneralAppFeesService feesService;
     private final LocationReferenceDataService locationRefDataService;
     private final FeatureToggleService featureToggleService;
     private final CoreCaseUserService coreCaseUserService;
-    private static final List<CaseState> stateAfterJudicialReferral = Arrays.asList(PENDING_CASE_ISSUED, CASE_ISSUED,
-                                                                         AWAITING_CASE_DETAILS_NOTIFICATION, AWAITING_RESPONDENT_ACKNOWLEDGEMENT, CASE_DISMISSED,
-                                                                         AWAITING_APPLICANT_INTENTION, PROCEEDS_IN_HERITAGE_SYSTEM, IN_MEDIATION);
 
     @Override
     protected Map<String, Callback> callbacks() {
@@ -118,30 +115,33 @@ public class InitiateGeneralApplicationHandler extends CallbackHandler {
     private CallbackResponse aboutToStartValidationAndSetup(CallbackParams callbackParams) {
         List<String> errors = new ArrayList<>();
         CaseData caseData = callbackParams.getCaseData();
-
-        // If Pre SDO allow GA in all locations.
-        // If Post SDO including JUDICIAL REFERRAL, allow GA in all locations, except Birmingham
-        if (inStateAfterJudicialReferral(caseData.getCcdState())
-            && !featureToggleService.isPartOfNationalRollout(caseData.getCaseManagementLocation().getBaseLocation())) {
-            log.info("Gen apps for case {} not part of national rollout, post SDO", caseData.getCcdCaseReference());
-            errors.add(NOT_IN_EA_REGION);
+        log.info("initiating general application callback for caseId {}", caseData.getCcdCaseReference());
+        if (settleDiscontinueStates.contains(caseData.getCcdState())
+            && caseData.getPreviousCCDState() == null) {
+            return AboutToStartOrSubmitCallbackResponse.builder()
+                .errors(List.of(NOT_ALLOWED_SETTLE_DISCONTINUE))
+                .build();
         }
 
         if (!initiateGeneralApplicationService.respondentAssigned(caseData)) {
+            log.info("initiating general application not allowed for caseId {}", caseData.getCcdCaseReference());
             errors.add(RESP_NOT_ASSIGNED_ERROR);
         }
+        log.info("initiating general application allowed for caseId {}", caseData.getCcdCaseReference());
         CaseData.CaseDataBuilder<?, ?> caseDataBuilder = caseData.toBuilder();
+        CaseEvent caseEvent = CaseEvent.valueOf(callbackParams.getRequest().getEventId());
 
         if (initiateGeneralApplicationService.caseContainsLiP(caseData)) {
-            if (!featureToggleService.isGaForLipsEnabled()) {
+            if (!featureToggleService.isGaForLipsEnabled()
+                || (caseData.isRespondentResponseBilingual() && !featureToggleService.isGaForWelshEnabled() && !caseData.isLipvLROneVOne()
+                && !(caseEvent == INITIATE_GENERAL_APPLICATION_COSC))) {
                 errors.add(LR_VS_LIP);
-            } else {
-                /*
-                 * General Application can only be initiated if Defendant is assigned to the case
-                 * */
-                if (Objects.isNull(caseData.getDefendantUserDetails())) {
-                    errors.add(RESP_NOT_ASSIGNED_ERROR_LIP);
-                }
+            } else if (featureToggleService.isDefendantNoCOnlineForCase(caseData) && caseData.isLipvLROneVOne()
+                && caseData.isClaimantBilingual() && !featureToggleService.isGaForWelshEnabled()) {
+                errors.add(LR_VS_LIP);
+            } else if (!(featureToggleService.isGaForLipsEnabledAndLocationWhiteListed(caseData
+                                                              .getCaseManagementLocation().getBaseLocation()))) {
+                errors.add(NOT_IN_EA_REGION);
             }
         }
         String authToken = callbackParams.getParams().get(BEARER_TOKEN).toString();
@@ -177,7 +177,7 @@ public class InitiateGeneralApplicationHandler extends CallbackHandler {
         if (generalAppTypes.size() == 1
                 && generalAppTypes.contains(GeneralApplicationTypes.SETTLE_BY_CONSENT)
                 && !consent) {
-            errors.add(INVALID_SETTLE_BY_CONSENT);
+            errors.add(INVALID_SETTLE_BY_CONSENT.getValue());
         }
         return AboutToStartOrSubmitCallbackResponse.builder()
                 .data(caseDataBuilder.build().toMap(objectMapper))
@@ -264,7 +264,7 @@ public class InitiateGeneralApplicationHandler extends CallbackHandler {
         CaseData caseData = callbackParams.getCaseData();
         GAUrgencyRequirement generalAppUrgencyRequirement = caseData.getGeneralAppUrgencyRequirement();
         List<String> errors = generalAppUrgencyRequirement != null
-            ? initiateGeneralApplicationService.validateUrgencyDates(generalAppUrgencyRequirement)
+            ? generalApplicationValidator.validateUrgencyDates(generalAppUrgencyRequirement)
             : Collections.emptyList();
 
         return AboutToStartOrSubmitCallbackResponse.builder()
@@ -276,7 +276,7 @@ public class InitiateGeneralApplicationHandler extends CallbackHandler {
         CaseData caseData = callbackParams.getCaseData();
         GAHearingDetails hearingDetails = caseData.getGeneralAppHearingDetails();
         List<String> errors = hearingDetails != null
-            ? initiateGeneralApplicationService.validateHearingScreen(hearingDetails)
+            ? generalApplicationValidator.validateHearingScreen(hearingDetails)
             : Collections.emptyList();
 
         return AboutToStartOrSubmitCallbackResponse.builder()
@@ -365,7 +365,7 @@ public class InitiateGeneralApplicationHandler extends CallbackHandler {
 
         Map<String, Object> data = initiateGeneralApplicationService
                 .buildCaseData(dataBuilder, caseData, userDetails, callbackParams.getParams().get(BEARER_TOKEN)
-                        .toString(), feesService).toMap(objectMapper);
+                        .toString()).toMap(objectMapper);
         return AboutToStartOrSubmitCallbackResponse.builder()
                 .data(data).build();
     }
@@ -383,18 +383,21 @@ public class InitiateGeneralApplicationHandler extends CallbackHandler {
     }
 
     private CaseData setWithNoticeByType(CaseData caseData) {
-        if (Objects.nonNull(caseData.getGeneralAppType())
-                && caseData.getGeneralAppType().getTypes().size() == 1
-                && caseData.getGeneralAppType().getTypes().contains(GeneralApplicationTypes.VARY_PAYMENT_TERMS_OF_JUDGMENT)) {
-            caseData = caseData.toBuilder()
+        if (isSingleAppTypeVaryJudgment(caseData)) {
+            return caseData.toBuilder()
                     .generalAppInformOtherParty(
                             GAInformOtherParty.builder().isWithNotice(YesOrNo.YES).build()).build();
         }
         return caseData;
     }
 
-    private boolean inStateAfterJudicialReferral(CaseState state) {
-        return !stateAfterJudicialReferral.contains(state);
+    private boolean isSingleAppTypeVaryJudgment(CaseData caseData) {
+        if (Objects.nonNull(caseData.getGeneralAppType())) {
+            return caseData.getGeneralAppType().getTypes().size() == 1
+                && caseData.getGeneralAppType().getTypes().contains(GeneralApplicationTypes.VARY_PAYMENT_TERMS_OF_JUDGMENT);
+        }
+        return Objects.nonNull(caseData.getGeneralAppTypeLR())
+            && caseData.getGeneralAppTypeLR().getTypes().size() == 1
+            && caseData.getGeneralAppTypeLR().getTypes().contains(GeneralApplicationTypesLR.VARY_PAYMENT_TERMS_OF_JUDGMENT);
     }
-
 }
